# helper-functions

./: AUTHORS.rst  README.rst  __init__.py  environment.yml  helper_functions_package.py  pyproject.toml
.github/workflows/: build-wheel-release-upload.yml  check-news-item.yml  matrix-and-codecov-on-merge-to-main.yml  publish-docs-on-release.yml  tests-on-pr.yml
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/api/: ken.helper_functions.example_package.rst  ken.helper_functions.rst
src/ken/: __init__.py
src/ken/helper-functions/: __init__.py  helper_functions.py  version.py
tests/: test_version.py
