[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helper_functions_package"
version = "0.1.0"
description = "A package for training and plotting linear regression."
authors = [
    { name = "Ken Guo", email = "hg2741@columbia.edu" }
]

dependencies = [
    "matplotlib",
    "mglearn",
    "numpy",
    "scikit-learn"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| \.rst
| \.txt
| _build
| buck-out
| build
| dist

# The following are specific to Black, you probably don't want those.
| blib2to3
| tests/data
)/
